release 1.5 (11-2010)
- Fixed issue 589
  https://jersey.dev.java.net/issues/show_bug.cgi?id=589
  Related to https://glassfish.dev.java.net/issues/show_bug.cgi?id=13649
  Checking "assignability" before actually creating instance of class
  found using ServiceFinder to prevent classloading issues.
- Fixed issue 478
  https://jersey.dev.java.net/issues/show_bug.cgi?id=478
  Applies when marshalling a collection to JSON and MAPPED or NATURAL JSON notations
  are used. A JSON array is generated if root unwrapping is set to true.
  Otherwise, if root unwrapping is set to false, a JSON object is returned.

release 1.4 (11-09-2010)
- Fixed issue 431
  https://jersey.dev.java.net/issues/show_bug.cgi?id=431
  The use of @PerSession no longer results in a NotSerializableException when 
  session state is persisted for internal state, associated with resource
  instances, that is stored as a session attribute.
- Fixed issue 554
  https://jersey.dev.java.net/issues/show_bug.cgi?id=554
  Tracing is enabled for the JSP template processor. The JSP name and reference
  to the it variable is output.
- Fixed issue 571
  https://jersey.dev.java.net/issues/show_bug.cgi?id=571
  User defined providers (MessageBodyReaders and Writers) must have higher
  priority than Jersey provided ones (client & server side).
- When ServletContainer.FEATURE_FILTER_FORWARD_ON_404 is enabled
  and the status code is 404 call HttpServletResponse.setStatus otherwise
  call HttpServletResponse.sendError.
- Fixed issue 578
  https://jersey.dev.java.net/issues/show_bug.cgi?id=578
  The async client, when no HTTP async implementation is utilized, uses
  ExecutorService to execute the request/response task.
  The default implementation is Executors.newCachedThreadPool() and the
  implementation can be set on the Client.
- Fixed issue 577
  https://jersey.dev.java.net/issues/show_bug.cgi?id=577
  When a client sends an empty request to a resource method that consumes